--- a/download/download.html
+++ b/download/download.html
@@ -1,14 +1,98 @@
-<!DOCTYPE HTML>
+<!doctype html>
 <html>
-    <head>
-        <meta http-equiv="content-type" content="text/html; charset=utf-8">
-        <title>Preview iFrame</title>
-        <link rel="stylesheet" href="download.css" type="text/css">
-        <script type="application/javascript" src="download.js"></script>
-    </head>
-    <body>
-        <div style="text-align: center;">
-            <img id="preview"  style="border:1px solid grey" height="120">
-        </div>
-    </body>
+<head>
+  <meta charset="utf-8">
+  <title>Attachment Viewer</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <style>
+    :root { --bg:#0b0c0f; --fg:#e9eef5; --muted:#9aa7b2; --card:#151821; --accent:#4da3ff; --border:#222838; }
+    html,body{height:100%;}
+    body{
+      margin:0; font-family:ui-sans-serif,system-ui,Segoe UI,Roboto,Arial;
+      color:var(--fg); background:linear-gradient(180deg,#0b0c0f,#0e1118);
+      display:flex; flex-direction:column;
+    }
+    header{
+      padding:16px 20px; border-bottom:1px solid var(--border);
+      display:flex; align-items:center; gap:12px; background:#0e1218cc; backdrop-filter: blur(6px);
+      position:sticky; top:0; z-index:10;
+    }
+    h1{font-size:16px; margin:0; letter-spacing:.3px; font-weight:600;}
+    .sub{color:var(--muted); font-size:12px;}
+    main{padding:20px; display:flex; gap:20px; flex:1; overflow:auto;}
+    .panel{ background:var(--card); border:1px solid var(--border); border-radius:6px; padding:16px; }
+    .left{min-width:340px; max-width:440px; flex:0 0 380px;}
+    .right{flex:1; display:flex; flex-direction:column;}
+
+    .controls{display:flex; gap:8px; flex-wrap:wrap; margin-top:8px;}
+    button{
+      background:#1b2230; color:var(--fg); border:1px solid var(--border); border-radius:4px;
+      padding:8px 12px; cursor:pointer; font-size:13px;
+    }
+    button.primary{ background:var(--accent); color:#051224; border-color:#2c7ed3; }
+    button:disabled{opacity:.5; cursor:not-allowed;}
+
+    /* Ліва колонка — всі прев’ю одразу */
+    ul.list{list-style:none; margin:0; padding:0; display:flex; flex-direction:column; gap:12px; max-height:72vh; overflow:auto;}
+    .item{
+      display:flex; gap:12px; align-items:center; padding:10px; border:1px solid var(--border);
+      background:#0f1420; border-radius:2px; cursor:pointer;
+    }
+    .item.active{ background:#32474e; }
+    .thumb{
+      width:128px; height:128px; border-radius:2px; border:1px solid var(--border);
+      display:flex; align-items:center; justify-content:center; overflow:hidden; background:#0b0f16;
+      flex:0 0 128px;
+    }
+    .thumb img{max-width:100%; max-height:100%; display:block;}
+    .meta{flex:1; min-width:0;}
+    .name{font-size:13px; white-space:nowrap; overflow:hidden; text-overflow:ellipsis;}
+    .type{font-size:11px; color:var(--muted);}
+    .row-actions{display:flex; gap:8px;}
+    .empty{color:var(--muted); padding:24px; text-align:center; border:1px dashed var(--border); border-radius:6px;}
+
+    /* Права панель — лише одне, велике прев’ю */
+    #viewer{
+      margin-top:12px; flex:1; background:#0b0f16; border-radius:6px; border:1px solid var(--border);
+      padding:12px; overflow:auto; display:flex; align-items:center; justify-content:center;
+      min-height:72vh;
+    }
+    #viewer img{ max-width:100%; max-height:78vh; object-fit:contain; display:block; border-radius:4px; }
+
+    footer{padding:12px 20px; border-top:1px solid var(--border); color:var(--muted); font-size:12px;}
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Attachment Viewer</h1>
+    <div class="sub" id="contextInfo">Loading context…</div>
+  </header>
+
+  <main>
+    <section class="panel left">
+      <strong>Attachments</strong>
+      <div class="controls">
+        <button id="btnRefresh" title="Reload the message attachments">Refresh</button>
+        <button id="btnSaveAll" class="primary" disabled title="Download all attachments">Save All</button>
+      </div>
+      <div id="listWrap" style="margin-top:12px;">
+        <ul id="attList" class="list"></ul>
+        <div id="empty" class="empty" hidden>No attachments found.</div>
+      </div>
+    </section>
+
+    <section class="panel right">
+      <strong>Preview</strong>
+      <div id="viewer">
+        <div class="empty">Select an image to preview.</div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    All thumbnails are loaded automatically. Click any item to view it larger.
+  </footer>
+
+  <script src="download.js"></script>
+</body>
 </html>
